# struct-of-arrays

./: CMakeLists.txt  CMakePresets.json  README.md
StructofArrays/: CMakeLists.txt  Iterable.h  StructofArrays.cpp  StructofArrays.h  TupleTools.h
UnitTests/: CMakeLists.txt  UnitTests.cpp  UnitTests.h
